[project]
name = "python-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "argon2-cffi>=25.1.0",
    "fastapi[standard]>=0.116.1",
    "ffmpeg>=1.4",
    "httpx>=0.28.1",
    "numpy>=2.3.3",
    "passlib[argon2,bcrypt]>=1.7.4",
    "pydantic-settings>=2.10.1",
    "python-jose[cryptography]>=3.5.0",
    "soundcard>=0.4.4",
    "soundfile>=0.13.1",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]

[tool.mypy]
strict = true
disable_error_code = ["attr-defined", "import", "no-untyped-def", "assignment", "var-annotated"]
python_version = "3.13"
exclude = ["venv", ".*venv.*"]
plugins = ["sqlmodel.mypy"]  # ADD THIS LINE

[tool.ruff]
line-length = 110
target-version = "py313"
exclude = ["venv", ".*venv.*"]

[tool.ruff.isort]
known-first-party = ["reverse_words"]
